--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 amqp==5.1.1
 asgiref==3.7.2
 billiard==3.6.4.0
+boto3==1.28.58
+botocore==1.31.58
 cached-property==1.5.2
 celery==5.2.7
 click==8.1.7
@@ -10,12 +12,17 @@ click-repl==0.3.0
 colorama==0.4.6
 Django==3.2.21
 djangorestframework==3.14.0
-importlib-metadata==6.7.0
+importlib-metadata==4.13.0
+jmespath==1.0.1
 kombu==5.2.4
 prompt-toolkit==3.0.39
+python-dateutil==2.8.2
 pytz==2023.3.post1
+s3transfer==0.7.0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
+urllib3==1.26.17
 vine==5.0.0
 wcwidth==0.2.6
 zipp==3.15.0
